tests/samples/negative/generics/duplicate_with_plain_struct.ax
module duplicate_with_plain_struct;

struct Box<T> {
    value: T;
}

struct Box {
    value: i32;
}

fn main() -> i32 {
    return 0;
}
